src/test/test-models/good/parser-generator/user-function-struct-const.stan
functions {
  real foo(real x) { return x; }
}
model {
}
