src/test/test-models/bad/reserved/STAN_MINOR.stan
data {
  real STAN_MINOR;
}
model {
}
